# LP3flask-project

./: pyproject.toml
banana/: app.py
banana/static/: style2.css
banana/templates/: base.html  base2.html  cadastro-produto.html  gerar-cnpj.html  gerar-cpf.html  produto.html  produtos.html  validar-cnpj.html  validar-cpf.html  validar-result.html
